# django-celery-boost

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGES  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/: file-filters.yml
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
docs/_theme/css/: style.css.map
docs/src/: .pages  best_practices.md  contributing.md  index.md  install.md  reference.md
src/celery_model/: admin.py  models.py
src/django_celery_boost/: __init__.py  admin.py  models.py  signals.py  task.py  version.py
src/django_celery_boost/templates/admin/celery_boost/: change_form.html  inspect.html  queue.html
src/django_celery_boost/templates/admin/django_celery_boost/: inspect.html
tests/: .coveragerc  conftest.py  test_admin.py  test_canvas.py  test_celery.py  test_eager.py  test_model.py  test_permissions.py  test_signature.py  test_tracking.py  test_utils.py  test_worker.py
tests/demoapp/: manage.py
tests/demoapp/demo/: __init__.py  admin.py  apps.py  backends.py  celery.py  factories.py  messages.py  models.py  settings.py  tasks.py  urls.py
tests/demoapp/demo/migrations/: 0001_initial.py  0002_addtojob_sumandaddtojob_valuejob.py  0002_addtojob_sumjob_valuejob.py
