[project]
name = "django-celery-boost"
version = "0.4.1"
description = "Django Abstract Model to work with Celery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.4.0",
    "django-admin-extra-buttons>=1.5.8",
    "django-concurrency>=2.6",
    "django>=4",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.36",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocstrings-python",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "celery[pytest]>=5.4.0",
    "django-webtest>=1.9.12",
    "factory-boy>=3.3.1",
    "flake8>=7.1.1",
    "ipython>=8.18.1",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pdbpp>=0.10.3",
    "psycopg>=2.9.9",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest-echo>=1.7.3",
    "pytest>=8.3.3",
    "tox>=4.20.0",
    "tox-uv",
    "psycopg-binary>=3.2.2",
    "flower>=2.0.1",
    "bump2version>=1.0.1",
]



[tool.isort]
profile = "black"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''
