[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.25",
]

[project]
name = "django-celery-boost"
description = "Django Abstract Model to work with Celery"
readme = "README.md"
maintainers = [
  { name = "sax", email = "s.apostolico@gmail.com" },
]
authors = [
  { name = "sax", email = "s.apostolico@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "celery>=5.4",
  "django-admin-extra-buttons",
  "django-concurrency",
  "sentry-sdk",
]

urls.downloads = "https://github.com/unicef/django-celery-boost"
urls.homepage = "https://github.com/unicef/django-celery-boost"

[dependency-groups]

dev = [
  "celery[pytest]>=5.4",
  "django-webtest>=1.9.13",
  "factory-boy>=3.3.1",
  "flower>=2.0.1",
  "mypy>=1.11.2",
  "pdbpp>=0.10.3",
  "psycopg>=2.9.9",
  "psycopg-binary>=3.2.2",
  "pytest>=8.3.3",
  "pytest-cov>=5",
  "pytest-django>=4.9",
  "pytest-echo>=1.7.3",
  "tox>=4.20",
  "tox-uv",
]

docs = [
  "mkdocs>=1.6.1",
  "mkdocs-awesome-pages-plugin>=2.9.3",
  "mkdocs-material>=9.5.36",
  "mkdocstrings-python",
]

[tool.hatch]
build.hooks.vcs.version-file = "src/django_celery_boost/version.py"
version.source = "vcs"
raw-options = { root = "../.." }

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "src/django_celery_boost/**/*.*",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/django_celery_boost" ]

[tool.check-manifest]
ignore = """
Makefile
*.sqlite
.tox/*"""
